# ansible-role-mongodb

./: .gitignore  .yamllint  Makefile  README.md  devbox.json  pyproject.toml
.github/workflows/: lint.yml  molecule.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/common/: converge.yml  prepare.yml  verify.yml
molecule/hold/: converge.yml  molecule.yml  verify.yml
molecule/install/: molecule.yml
molecule/reconfigure/: molecule.yml  side_effect.yml
molecule/replicaset/: converge.yml  molecule.yml  side_effect.yml
molecule/ufw/: molecule.yml
molecule/votes/: molecule.yml  side_effect.yml
tasks/: install.yml  lock.yml  main.yml
tasks/replicaset/: manage.yml  members.yml  primary.yml  reconfigure.yml
