[tool.poetry]
name = "pokerops.mongodb"
version = "0.1.0"
description = ""
authors = ["wpnops"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "*", markers = "platform_system != 'Windows'" }
molecule-docker = "^2.1.0"
ansible = "^11.2.0"
netaddr = "^1.3.0"
yamllint = "^1.35.1"
molecule = "^25.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
